fix for background image not responsive on my iphone

--- a/css/index.css
+++ b/css/index.css
@@ -189,6 +189,9 @@ header {
   display: flex;
   flex-direction: column;
   margin-bottom: 15vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
