--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,6 +8,9 @@ header {
   display: flex;
   flex-direction: column;
   margin-bottom: 15vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 
   // parallax
   background-attachment: fixed;
